# data_organizing_util

./: LICENSE  README.md  pyproject.toml
date_organizer_util/: __main__.py  main.py
date_organizer_util/core/: m_logger.py  organizer.py
tests/: test_organize.py
