[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "date-org"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.15.1",
]

[project.scripts]
date_organizer_util = "date_organizer_util:main"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "hatch>=1.14.0",
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # https://docs.astral.sh/ruff/rules/#error-e
    "F",      # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]
ignore = ["UP031"] # https://docs.astral.sh/ruff/rules/printf-string-formatting/

[tool.ruff.lint.isort]
combine-as-imports = true


[tool.hatch.version]
path = "date_organizer_util/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/date_organizer_util"]

[tool.hatch.build.targets.wheel]
include = ["/date_organizer_util"]
